# mirror_app_test

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  nginx.conf  pyproject.toml
app/: config.py
app/database/crud/: order.py
app/database/migrations/: env.py
app/database/migrations/versions/: 2024_11_19_1226-0cf3f0eb7cd0_order_model.py  2024_11_20_1101-2d3d456f2021_add_timezones.py
app/database/models/: __init__.py  base.py  helper.py  order.py
app/routers/: __init__.py
app/routers/v1/: __init__.py  order.py
app/schemas/: order.py
