[tool.poetry]
name = "mirror-app-test"
version = "0.1.0"
description = ""
authors = ["Anton Mindlin <anton.mindlin@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 110
per-file-ignores = [
    "__init__.py: F401",
]

[tool.black]
line-length = 110
